# openvpn-otp

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  ubuntu_16.04_lts_build.sh  ubuntu_16.04_lts_package.sh
src/: Makefile.am  base32.c  base32.h  hex.c  hex.h  openvpn-cr.c  openvpn-cr.h  otp.c
