MAINTAINERCLEANFILES = Makefile.in \
                       aclocal.m4 \
                       config.h.in \
                       configure \
                       depcomp \
                       missing \
                       install-sh \
                       config.guess \
                       config.h.in~ \
                       config.sub \
                       ltmain.sh \
                       libtool \
                       m4/*.m4

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src
